Fix edge-to-edge on iOS and replace plugin.

--- a/IsraelHiking.Web/src/application/components/map/main-map.component.scss
+++ b/IsraelHiking.Web/src/application/components/map/main-map.component.scss
@@ -12,6 +12,7 @@
 
 .maplibregl-ctrl-top-left {
     z-index: v.$app-left-z-index !important;
+    margin-left: env(safe-area-inset-left, 0) !important;
 }
 
 .maplibregl-ctrl-top-right {
@@ -26,6 +27,7 @@
 .maplibregl-ctrl-bottom-left {
     z-index: v.$app-left-z-index - 20 !important;
     margin-bottom: env(safe-area-inset-bottom, 0) !important;
+    margin-left: env(safe-area-inset-left, 0) !important;
 }
 
 [dir=rtl] .maplibregl-ctrl-bottom-right {
